--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/wvmitchell/pyramid-puzzle/issues"
   },
-  "homepage": "https://github.com/wvmitchell/pyramid-puzzle#readme"
+  "homepage": "https://github.com/wvmitchell/pyramid-puzzle#readme",
+  "devDependencies": {
+    "jest": "^29.3.1"
+  }
 }
